--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "@types/node": "^17.0.21",
     "rimraf": "^3.0.2",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "pdf2json": "^2.0.0"
   }
 }
